configure alloy in latex

--- a/RASD/latex/main.tex
+++ b/RASD/latex/main.tex
@@ -4,6 +4,10 @@
 \usepackage{geometry} % to define page layout
 \usepackage[pdftex, colorlinks]{hyperref} % to use href
 
+\usepackage[dvipsnames]{xcolor}
+\usepackage{listings}
+\usepackage{alloy-style}
+
 %----- Define page layout -----
  \geometry{
  left=25mm,
