--- a/RASD/latex/main.tex
+++ b/RASD/latex/main.tex
@@ -1,20 +1,4 @@
-\documentclass[a4paper]{article}
-\usepackage{graphicx} % to include graphicx elements
-\usepackage{tabu} % to use tables
-\usepackage{geometry} % to define page layout
-\usepackage[pdftex, colorlinks]{hyperref} % to use href
-
-\usepackage[dvipsnames]{xcolor}
-\usepackage{listings}
-\usepackage{alloy-style}
-
-%----- Define page layout -----
- \geometry{
- left=25mm,
- right=25mm,
- top=30mm,
- bottom=25mm,
- headsep=7mm}
+\input{commandsFile}
  
 % -----------------------------
 \begin{document}
@@ -23,7 +7,6 @@
 \input{titlePage}
 
 %Define deliverable specific info
-%Replace cell contents where needed
 \begin{table}[h!]
 \begin{tabu} to \textwidth { X[0.3,r,p] X[0.7,l,p] }
 \hline
