--- a/RASD/latex/sections/requirements.tex
+++ b/RASD/latex/sections/requirements.tex
@@ -3,6 +3,72 @@
 	\subsubsection{Hardware Interfaces}
 	\subsubsection{Software Interfaces}
 	\subsubsection{Communication Interfaces}
+\subsection{UML modeling}
+	\subsubsection{Use Case diagram}
+		\textbf{Diagram} \\
+		\indent \textit{TODO: here an image will be attached}
+		\newline
+		\textbf{User creates event}
+		\renewcommand{\arraystretch}{1.6} % increase line height
+			\begin{table}[h!]
+			\begin{tabu} to \textwidth {| X[\fcWidth,r,p] | X[1-\fcWidth,l,p] |}
+				\hline\textbf{Use case:} & User creates an event
+				\\
+				\hline\textbf{Actors:} & User
+				\\
+				\hline\textbf{Entry condition:} & The user must be logged
+				\\
+				\hline\textbf{Flow of events:} & The user creates an event (a meeting, appointment or generic event) giving it a name;\newline
+				User specifies the location of the event;\newline
+				User specifies details such as passengers or baggage;\newline
+				User selects a travel mean taking to account app’s suggestion;\newline
+				The app takes note of the settings and send a confirmation;\newline
+				The app redirects the user to the main page.
+				\\
+				\hline\textbf{Secondary flows:} & User does not specify a travel mean and let it blank;\newline
+				The app takes anyway note of the setting and alert the user of the missing information; \newline
+				The app redirects the user to the main page.
+				\\
+				\hline\textbf{Exceptions:} & Warnings messages are created in the following cases:
+				\begin{itemize}
+					\item User creates an event that overlaps another event;
+					\item User creates an event with a location that is unreachable in the allocated time;
+					\item User creates an event that violates the set constraints about the break windows.
+				\end{itemize}
+				\\
+				\hline\textbf{Post conditions:} & The user is successfully redirected to the main page.
+				\\
+				\hline
+			\end{tabu}
+			\end{table}
+			\\
+		\textbf{**use case name**}
+		\begin{table}[h!]
+			\begin{tabu} to \textwidth {| X[\fcWidth,r,p] | X[1-\fcWidth,l,p] |}
+				\hline\textbf{Use case:} & **text**
+				\\
+				\hline\textbf{Actors:} & **text**
+				\\
+				\hline\textbf{Entry condition:} & **text**
+				\\
+				\hline\textbf{Flow of events:} & **text**
+				\\
+				\hline\textbf{Secondary flows:} & **text**
+				\\
+				\hline\textbf{Exceptions:} & **text**
+				\\
+				\hline\textbf{Post conditions:} & **text**
+				\\
+				\hline
+			\end{tabu}
+		\end{table}
+	\subsubsection{Class diagram}
+	\subsubsection{Activity diagrams}
+		\textbf{Registration diagram} \\
+		\indent \textit{TODO: here an image will be attached}
+		\newline
+		\textbf{Appointment creation diagram} \\
+		\indent \textit{TODO: here an image will be attached}
 \subsection{Functional Requirements}
 \subsection{Performance Requirements}
 \subsection{Design Constraints}
