add to RASD 4 scenarios, remove relative snippets

--- a/RASD/latex/sections/overview.tex
+++ b/RASD/latex/sections/overview.tex
@@ -1,4 +1,27 @@
 \subsection{Product perspective}
 \subsection{Product functions}
+\textit{TODO: here will be included a description}
+	\subsubsection{Scenario 1}
+	Mario is the director of his company and he has seen an ad of Travlendar+, so he wants to try it to organize the weekly meetings with his employees. After the installation, he has to register to the app. The first thing he creates is his weekly program. We work from Monday to Friday, from 8 am to 16 pm.\newline
+	There is an actual meeting coming up on Friday at 8 pm, so he creates a new	meeting in the app. After setting the time and the day, he invites his employees to join the meeting. He will remain in his office, so he will not need to use	any travel means.\newline
+	Giovanni is one of Mario's employee and he is registered to Travlendar+. He receives a notification and accepts the invitation to the meeting. He chooses to reach the location by walk because he will already be nearby.\newline
+	Alex is another employee and does not have an account on Travlendar. He receives an email with an invitation link to register to the app. After the registration, the app redirects him to the meeting's invitation and he will proceed by accepting it and choosing to go by car. Then he explores the app and decides to add his weekly program. The app finds out that he will be in the café near the metro at 6:40 pm, so it suggests Alex to take the metro instead of the car. He accepts the suggestion.
+	\subsubsection{Scenario 2}
+	Paolo, a resident of Bergamo, has recently registered to Travlendar+ and during	the initial setup has specified a flexible launch break from 11:00 am to 13:00 am, with at least 40 minutes of break.\newline
+	Tomorrow he is going to have an audition at 12:30 pm, in Monza. He inserts the event in the app and after having specified that the audition will end at about 13:30pm, he looks at the suggestions of the app on the travel means to take: the app suggests him some travel solutions, but he does not specify which he's going to take because he wants to think about it overnight.\newline
+	The next morning, the app sends Paolo a reminder with two travel solutions:\\
+	\indent- go by car, leaving at about 11.45am, arriving at 12.27 pm;\\
+	\indent - take the bus, passing at 10:49 am and arriving at 11:38 am.
+	\newline He chooses the second option to avoid being late at the audition.
+	\subsubsection{Scenario 3}
+	Alex is a professor of Bologna University, he has a short memory and is very badly organized, so he decides to rely on Travlendar+. Alex downloads it on occasion of a work trip. He signs up and decides to insert his credit card data for an eventual purchase from the app.\newline
+	He needs to reach the University of Parma to hold a conference. Alex sets up the app to arrive in Parma by train. Travlendar+ asks Alex the kind of event and he specifies it is a formal work meeting. The app asks him which transport means he wants to take in order to get to the university from the railway station. Alex opts to go by bicycle, although the app suggest not to, because of the formal type of meeting.\newline
+	The departure day Alex is in a shopping center with his family, he has completely forgotten that he has a train to take, but Travlendar+ solves the problem by notifying him of the appointment. At that point, Alex has no more time and chooses to buy the train tickets using the app. While he is on the train, Travlendar+ suggests him to choose another transport means (instead of a bike) because of the bad weather conditions. Alex accepts the advice and decides to take a bus.
+	\subsubsection{Scenario 4}
+	Luca is a meteorologist who works for a laboratory in Venice. He knows very well all the climatic problem that humans are creating in their Country. Luca finds Travlendar+ very appropriate to help in solving this problematic. He likes to opt for an Eco-friendly solution by setting up this preference in the app settings. In this way he can avoid, at least in this aspect, further damaging the environment. His favorite functionality is bike sharing because of its innovative localization system and its low environmental impact.
+	\subsubsection{Scenario 5}
+	\textit{TODO: here will be included a scenario}
+	\subsubsection{Scenario 6}
+	\textit{TODO: here will be included a scenario}
 \subsection{User characteristics}
 \subsection{Assumptions, dependencies and constraints}
