add scenario 5 and 6

--- a/RASD/latex/sections/overview.tex
+++ b/RASD/latex/sections/overview.tex
@@ -20,8 +20,23 @@
 	\subsubsection{Scenario 4}
 	Luca is a meteorologist who works for a laboratory in Venice. He knows very well all the climatic problem that humans are creating in their Country. Luca finds Travlendar+ very appropriate to help in solving this problematic. He likes to opt for an Eco-friendly solution by setting up this preference in the app settings. In this way he can avoid, at least in this aspect, further damaging the environment. His favorite functionality is bike sharing because of its innovative localization system and its low environmental impact.
 	\subsubsection{Scenario 5}
-	\textit{TODO: here will be included a scenario}
+	\textit{Mark, son of Lucas, asks to his father to bring him  to the basketball tournament of Sunday morning.\newline
+		Lucas checks the daily schedule for Sunday and he notices he already has an appointment with the hairdresser but, of course, spending time with his son is more important, so he decides to delete the previous event on the agenda and set a new one.\newline
+		Mark asks to the father if also his team mate Mike can come.
+		Of course Mark and Mike have to bring with them the bags with the jersey and the basketball shoes, so Lucas, creating the event on Travlendar+, after specifying the location of the basketball court, specifies also that he will bring with him baggage and passengers.\newline
+		Unfortunately his car is broken, so Lucas use  the app to look for alternative solutions.\newline
+		Travlendar+, taking into account the constraints previously settled by the man, suggests to him to use Enjoy or SmartToGo, two well known car sharing companies that will solve his problem.\newline
+		Lucas accepts the suggested solution and proceeds with the creation of the event.
+	}
 	\subsubsection{Scenario 6}
-	\textit{TODO: here will be included a scenario}
+	\textit{Mary, John's wife, one week ago, asked to her husband to pick the children up to school on Monday at 13.00 and, because she knows John,  forced him to take note of that with Travlendar+.\newline
+		So John planned this event on the app specifying that he will use the car to do it.
+		He specified also the location of the school.\newline
+		On Monday morning, as usual, Travlndar+ shows to John his daily program reminding him about his children and showing the previous  travel mean planned.\newline
+		John, still intentioned to pick the children up with the car, does not modify the plan, closes the app and goes to work in the other side of Milan.\newline
+		At 12.00 Travlendar+, according to the GPS position of the man, suggests him to leave in 15 minutes.
+		Travel+ also suggests to avoid to go through  Viale Gioia because of the traffic and take the SS1.\newline
+		Thanks to Travlendar+ John manages to be on time, collect the children and make his wife proud of him. 
+	}
 \subsection{User characteristics}
 \subsection{Assumptions, dependencies and constraints}
