add Monday session's work
- update class diagram
- generate Class Diagram image and add it to the document
- add terms to define in definition section
- add formal goals (in goals.txt file)

--- a/RASD/latex/sections/introduction.tex
+++ b/RASD/latex/sections/introduction.tex
@@ -1,6 +1,15 @@
 \subsection{Purpose}
 \subsection{Scope}
 \subsection{Definitions, Acronyms, Abbreviations}
+	\subsubsection{Definitions}
+		\begin{description}
+			% NB: use \item[- \textit{ *label* }:] description
+			\item[- \textit{welcome page}:] %TODO describe the definition
+			\item[- \textit{personal preferences}:] %TODO describe the definition
+		\end{description}
+		
+	\subsubsection{Acronyms}
+	\subsubsection{Abbreviations}
 \subsection{Revision history}
 \subsection{Reference documents}
 \subsection{Document Structure}
