--- a/RASD/latex/sections/requirements.tex
+++ b/RASD/latex/sections/requirements.tex
@@ -176,6 +176,9 @@
 			\end{tabu}
 		}
 	\subsubsection{Class diagram}
+		% don't really know what happens here, but it is fine graphically
+		% ((I'm referring to '\paperwidth-1')
+		\centerline{\includegraphics[width=\paperwidth-1]{Images/ClassDiagram}}
 	\subsubsection{Activity diagrams}
 		\textbf{Registration diagram} \\
 		\indent \textit{TODO: here an image will be attached}
