update activity diagrams, add purpose and scope in latex document, remove relative snippet

--- a/RASD/latex/sections/introduction.tex
+++ b/RASD/latex/sections/introduction.tex
@@ -1,5 +1,16 @@
 \subsection{Purpose}
+This document is the Requirement Analysis and Specification Document for the Travlendar+ application. Its aim is
+to inform about what the application offers, about requirements and goals that the system must present. This document offers also an analysis of the world and of the shared phenomena regarding Travlendar+. RASD contains class diagram to show domain model and other diagrams which illustrate, with more details, transactions of the functionality of the application.
 \subsection{Scope}
+Travlendar+ is an application that allows people to organize and to track their appointments and meeting by 
+registering them into the application. A person becomes a User of Travlendar+ by registering himself to the app. After this phase, users can start to use basic functionalities of the app (e.g. register appointments and organize meetings).\newline 
+The app allows users to create appointments, eventually inviting other users of the app, facilitating communication issues.
+The goal of Travlendar+ is to organize in the best way all daily commitments of its users considering all the possible problems that can influence travels and trips (e.g. weather conditions, strikes, etc.).\newline
+When a User creates an event, he can add, for the travel, eventual passengers or baggage, so that the app can suggest better trip choices. Travlendar+ allows users to visualize their planned schedule too.\newline 
+The dynamicity of the software allows users to set some personal preferences, for example, to set a flexible break window time for having free time or lunch, to choose eco-friendly solutions for his trips, to deactivate some transportation means.\newline 
+The system interfaces with other firms (e.g. transportation companies, territory maps companies, sharing transportation companies) to offer a more comprehensive user experience. In this way, a User has the possibility to buy tickets and passes for transportation means, as well as using shared transport services, directly from the app.
+This means that a user can use services of other companies (the ones with an agreement with Travlendar+), without leaving the app.
+
 \subsection{Definitions, Acronyms, Abbreviations}
 	\subsubsection{Definitions}
 		\begin{description}
