add formal goals to document

--- a/RASD/latex/commandsFile.tex
+++ b/RASD/latex/commandsFile.tex
@@ -6,6 +6,7 @@
 
 \usepackage[dvipsnames]{xcolor}
 \usepackage{listings}
+\usepackage{enumitem}
 \usepackage{alloy-style}
 
 %----- Define page layout -----
