--- a/RASD/latex/sections/requirements.tex
+++ b/RASD/latex/sections/requirements.tex
@@ -1,5 +1,20 @@
 \subsection{External Interface Requirements}
 	\subsubsection{User Interfaces}
+		Here we provide some mockups to show how the interface should appear to the user:\newline
+		
+		\begin{figure}[H]	
+			\centerline{\includegraphics[scale=0.4]{Images/Login}}
+			\caption{Login}
+		\end{figure}	
+		\begin{figure}[H]		
+			\centerline{\includegraphics[scale=0.4]{Images/suggestedsolution}}
+			\caption{Select solution}
+		\end{figure}	
+		\begin{figure}[H]
+			\centerline{\includegraphics[scale=0.4]{Images/schedule}}
+			\caption{Visualize schedule}
+		\end{figure}
+	
 	\subsubsection{Hardware Interfaces}
 	\subsubsection{Software Interfaces}
 	\subsubsection{Communication Interfaces}
