Update use case and RASD

--- a/RASD/latex/sections/requirements.tex
+++ b/RASD/latex/sections/requirements.tex
@@ -11,7 +11,7 @@
 			\caption{Select solution}
 		\end{figure}	
 		\begin{figure}[H]
-			\centerline{\includegraphics[scale=0.4]{Images/schedule}}
+			\centerline{\includegraphics[scale=0.5]{Images/schedule}}
 			\caption{Visualize schedule}
 		\end{figure}
 	
@@ -20,9 +20,13 @@
 	\subsubsection{Communication Interfaces}
 \subsection{UML modeling}
 	\subsubsection{Use Case diagram}
-		\textbf{Diagram} \\
-		\indent\textit{TODO: here an image will be attached}
-		\newline
+		\smallskip
+		\begin{figure}[H]	
+			\centerline{\includegraphics[width=\paperwidth-1]{Images/UseCaseDiagram}}
+			\caption{Use Case diagram}
+		\end{figure}
+
+
 		\renewcommand{\arraystretch}{1.6} % increase line height
 		
 		\medskip %leave a bit of space before the next 'section'
@@ -200,7 +204,7 @@
 	\subsubsection{Activity diagrams}
 		\begin{figure}[H]
 			\centerline{\includegraphics[height=0.75\paperheight]{Images/RegistrationDiagram}}
-			\caption{Registration diagram}
+			\caption{Registration activity diagram}
 		\end{figure}
 
 %		\begin{figure}[H]
