- modify goals, add AD. See commit details
- modify goals and scope to simplify interfaces with other companies
- add Activity Diagram image in chapter 3
- use \begin{figure} instead of simple images

--- a/RASD/latex/sections/introduction.tex
+++ b/RASD/latex/sections/introduction.tex
@@ -8,8 +8,7 @@ The app allows users to create appointments, eventually inviting other users of 
 The goal of Travlendar+ is to organize in the best way all daily commitments of its users considering all the possible problems that can influence travels and trips (e.g. weather conditions, strikes, etc.).\newline
 When a User creates an event, he can add, for the travel, eventual passengers or baggage, so that the app can suggest better trip choices. Travlendar+ allows users to visualize their planned schedule too.\newline 
 The dynamicity of the software allows users to set some personal preferences, for example, to set a flexible break window time for having free time or lunch, to choose eco-friendly solutions for his trips, to deactivate some transportation means.\newline 
-The system interfaces with other firms (e.g. transportation companies, territory maps companies, sharing transportation companies) to offer a more comprehensive user experience. In this way, a User has the possibility to buy tickets and passes for transportation means, as well as using shared transport services, directly from the app.
-This means that a user can use services of other companies (the ones with an agreement with Travlendar+), without leaving the app.
+The system interfaces with other firms (e.g. transportation companies, territory maps companies, sharing transportation companies) to offer a more comprehensive user experience. In this way, a User has the possibility to buy tickets and passes for transportation means. Moreover, the system offers a location service for vehicles of affiliated shared transport companies but to proceed with the renting the User is redirected to the company's app.
 
 \subsubsection{Goals}
 The system should:
@@ -43,8 +42,8 @@ The system should:
 		\item allows User to delete an existing appointment
 		\item allows User to visualize daily/weekly schedule
 		\item allows User to invite other persons to his/her appointment
-		\item allows User to rent a shared vehicle for an incoming appointment
-		\item allows User to locate nearest vehicle of a vehicle sharing system, if that is the transport means of choice
+		\item allows User to locate nearest vehicle of a vehicle sharing system, if that is the transport means of choice of an incoming appointment
+			\item allows User to being redirected to the company's app to proceed with the renting
 
 		\item show suggestions based on: traffic, weather conditions/forecast, strikes, type of appointment, baggage, passengers
 		\item notify the User about incoming appointments
