--- a/RASD/latex/sections/requirements.tex
+++ b/RASD/latex/sections/requirements.tex
@@ -178,13 +178,20 @@
 	\subsubsection{Class diagram}
 		% don't really know what happens here, but it is fine graphically
 		% ((I'm referring to '\paperwidth-1')
-		\centerline{\includegraphics[width=\paperwidth-1]{Images/ClassDiagram}}
+		\begin{figure}[H]
+			\centerline{\includegraphics[width=\paperwidth-1]{Images/ClassDiagram}}
+			\caption{General class diagram}
+		\end{figure}
 	\subsubsection{Activity diagrams}
-		\textbf{Registration diagram} \\
-		\indent \textit{TODO: here an image will be attached}
-		\newline
-		\textbf{Appointment creation diagram} \\
-		\indent \textit{TODO: here an image will be attached}
+		\begin{figure}[H]
+			\centerline{\includegraphics[height=0.75\paperheight]{Images/RegistrationDiagram}}
+			\caption{Registration diagram}
+		\end{figure}
+
+%		\begin{figure}[H]
+%			\centerline{\includegraphics[width=\paperwidth-1]{Images/AppointmentCreationDiagram}}
+%			\caption{Appointment creation diagram}
+%		\end{figure}
 \subsection{Functional Requirements}
 \subsection{Performance Requirements}
 \subsection{Design Constraints}
