--- a/RASD/latex/commandsFile.tex
+++ b/RASD/latex/commandsFile.tex
@@ -7,6 +7,7 @@
 \usepackage[dvipsnames]{xcolor}
 \usepackage{listings}
 \usepackage{enumitem}
+\usepackage{float}
 \usepackage{alloy-style}
 
 %----- Define page layout -----
