--- a/RASD/latex/main.tex
+++ b/RASD/latex/main.tex
@@ -27,15 +27,13 @@
 %------------------------------------------------------------------------------------------------------------------------------------------------
 \newpage
 \renewcommand{\contentsname}{Table of Contents} % rename from "Contents" to "Table of Contents"
-{\hypersetup{hidelinks} % avoid coloring table of contents
+% avoid coloring references in table of content, list of figures and tables
+{\hypersetup{hidelinks}
 \tableofcontents
-}
-
 \newpage
-\addcontentsline{toc}{section}{List of Figures}
 \listoffigures
-\addcontentsline{toc}{section}{List of Tables}
 \listoftables
+}
 
 %------------------------------------------------------------------------------------------------------------------------------------------------
 \clearpage
