add all activity diagrams, update latex main

--- a/RASD/latex/sections/requirements.tex
+++ b/RASD/latex/sections/requirements.tex
@@ -203,9 +203,23 @@
 		\end{figure}
 	\subsubsection{Activity diagrams}
 		\begin{figure}[H]
-			\centerline{\includegraphics[height=0.75\paperheight]{Images/RegistrationDiagram}}
+			\centerline{\includegraphics[height=0.75\paperheight]{Images/RegistrationDiagramAD}}
 			\caption{Registration activity diagram}
 		\end{figure}
+		\begin{figure}[H]
+			\centerline{\includegraphics[width=\paperwidth-1]{Images/CreationAppointmentAD}}
+			\caption{Creation appointment diagram}
+		\end{figure}
+		\begin{figure}[H]
+			\centerline{\includegraphics[height=0.35\paperheight]{Images/SolutionSelectionAD}}
+			\caption{Solution selection sub-activity}
+		\end{figure}
+		\begin{figure}[H]
+			\centerline{\includegraphics[height=0.35\paperheight]{Images/TicketHandlingAD}}
+			\caption{Ticket handling sub-activity}
+		\end{figure}
+
+		
 
 %		\begin{figure}[H]
 %			\centerline{\includegraphics[width=\paperwidth-1]{Images/AppointmentCreationDiagram}}
