fill user charactheristics section, requirement section and other minor sections

--- a/RASD/latex/sections/references.tex
+++ b/RASD/latex/sections/references.tex
@@ -6,4 +6,6 @@
 	GitHub for version control and team work
 \item
 	Alloy latex highlighting package: \href{https://github.com/Angtrim/alloy-latex-highlighting}{https://github.com/Angtrim/alloy-latex-highlighting}
+\item
+	StarUML for uml models
 \end{itemize}
