--- a/RASD/latex/sections/requirements.tex
+++ b/RASD/latex/sections/requirements.tex
@@ -1,6 +1,6 @@
 \subsection{External Interface Requirements}
 	\subsubsection{User Interfaces}
-		Here we provide some mockups to show how the interface should appear to the user:\newline
+		Here we provide some basic mockups to show how the interface should appear to the user:\newline
 		
 		\begin{figure}[H]	
 			\centerline{\includegraphics[scale=0.4]{Images/Login}}
@@ -16,6 +16,7 @@
 		\end{figure}
 	
 	\subsubsection{Hardware Interfaces}
+	
 	\subsubsection{Software Interfaces}
 	\subsubsection{Communication Interfaces}
 \subsection{UML modeling}
@@ -227,13 +228,50 @@
 %		\end{figure}
 \subsection{Functional Requirements}
 \subsection{Performance Requirements}
+The system has to be able to respond to a possibly great number of simultaneous requests and
+more generally to a great number of request throughout the day. Basing the analysis on
+competitors' results an average of 200000 (two hundred thousands) subscribed users and
+10000 (ten thousands) reservations per day may have to be expected and so correctly managed.
 \subsection{Design Constraints}
 	\subsubsection{Standard compliance}
 	\subsubsection{Hardware limitations}
+		\begin{itemize}
+		\item Mobile App: \newline
+		* 3G connection\newline
+		* GPS\newline
+		* Space for app package
+		\item Web App:\newline
+		* Modern browser with AJAX support
+		\end{itemize}
+	
 	\subsubsection{Any other constraint}
+	Regulatory policies
+	The system will ask for users' payment informations and obviously, in addition to store them
+	safely, will use them only for fees and rides payments.
+	Moreover, the system will have to ask for users' permission in order to retrieve and use their
+	positions.
+	Email addresses won't be used for commercial uses.
 \subsection{Software System Attributes} 
 	\subsubsection{Reliability}
+	The system must guarantee a 24/7 service. Very small deviations from this requirement will be
+	obviously acceptable.
 	\subsubsection{Availability}
+	The StB must guarantees a 3-nines availability (99.9 percent) with a downtime not greater than 8 hours per year.
 	\subsubsection{Security}
+User credentials and payment information will be stored. Data confidentiality is a primary concern.
+In addition, stored information must be sent to affiliated  transport Company systems or shared vehicle Company  systems when the user wants to buy tickets or rent a shared vehicle. To ensure the security of this information, the communication protocol between Systems must use asymmetric keys and digital signatures.
+	
 	\subsubsection{Maintainability}
+	The StB must be designed in the way to easly correct defects or their cause,
+	repair or replace faulty or worn-out components without having to replace still working parts,
+	prevent unexpected working condition,
+	maximize its useful life,
+	maximize efficiency, reliability, and safety,
+	meet new requirements,
+	make future maintenance and
+	cope with a changed environment.
+	
 	\subsubsection{Portability}
+	The StB must be able to run in all main mobile OS(Android, iOS, Nokia OS, blackBerry OS, windows-phone OS) and being supported by all the main Web Browser(Google Crome, Safari,FireFox, Microsoft Edge, Internet Explorer, ...)\newline
+	
+	scalability,accurancy,performance?
